--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">小白百宝箱</string>
+    <string name="app_name">小白工具箱</string>
     <string name="tool01">备忘录</string>
     <string name="tool02">数值计算器</string>
     <string name="tool03">待添加</string>
